--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview"
-  },
+    ,
+    "deploy": "gh-pages -d dist"
+    },
   "dependencies": {
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
@@ -28,6 +30,8 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.3.0",
-    "vite": "^5.4.2"
+    "vite": "^7.1.3"
+  ,
+  "gh-pages": "^5.0.0"
   }
 }
